# flashcards

./: CMakeLists.txt  build.sh  init.sh  run_tests.sh
src/: csv.h  language_structs.h  main.cpp  sql.cpp  sql.h  utils.cpp  utils.h  window.cpp  window.h
tests/: test_sql.cpp
